testsuite/poke.pkl/redef-diag-2.pk
/* { dg-do compile } */

fun foo = void:
{
  unit a = 10;
  unit b = 20;
  unit a = 30; /* { dg-error "" } */
}
